# orcha

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  spec.md
.github/workflows/: ci.yml  release.yml
samples/todo-lib/: Cargo.toml  README.md
samples/todo-lib/.orcha/: goal.md  orcha.yml  status.md
samples/todo-lib/.orcha/agentworkspace/: README.md  status_log.md
samples/todo-lib/.orcha/handoff/: inbox.md  outbox.md
samples/todo-lib/.orcha/profiles/: claude_impl_opencode_review.md  codex_impl_opencode_review.md  opencode_claude.md  opencode_codex.md  opencode_impl_claude_review.md  opencode_impl_codex_review.md  opencode_impl_no_review.md  opencode_only.md  quality_gate.md  unblock_first.md
samples/todo-lib/.orcha/roles/: implementer.md  planner.md  reviewer.md  scribe.md  verifier.md
samples/todo-lib/.orcha/roles/samples/: implementer_colloquial_ja.md  implementer_surgical.md  (+7 more)
samples/todo-lib/src/: lib.rs
scripts/: build.ps1  run.ps1  test.ps1
src/: lib.rs  machine_config.rs  main.rs
src/agent/: mod.rs  router.rs  verifier.rs
src/agent/backend/: anthropic.rs  codex.rs  gemini.rs  local_cli.rs  local_llm.rs  mod.rs
src/cli/: explain.rs  init.rs  mod.rs  profile.rs  run.rs  status.rs
src/config/: mod.rs
src/core/: agent_workspace.rs  cycle.rs  error.rs  gate.rs  handoff.rs  health.rs  mod.rs  profile.rs  status.rs  status_log.rs  structured_log.rs  task.rs  workspace_md.rs  worktree.rs
src/markdown/: frontmatter.rs  mod.rs  template.rs
src/phase/: briefing.rs  decide.rs  fix.rs  impl_phase.rs  mod.rs  plan.rs  review.rs  verify.rs
(+7 files in other folders)
