[package]
name = "orcha"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "orcha"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
anyhow = "1"
thiserror = "2"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4"] }

# Terminal output
colored = "2"
comfy-table = "7"

# Environment variables
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Regex for gate rules
regex = "1"

# Async trait
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
